# HW

./: README.md
.github/workflows/: googletest.yml  main.yml
task0/: README.md
task1/: .run.sh.swp  run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main_test.cpp  test.cpp
task3/: CMakeLists.txt
task4/src/01-simple-library/: Functions.cpp
task4/src/03-weather/: Weather.cpp
task4/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp  LeapTestCase.h
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task4/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
task5/cmake-with-flask/: Dockerfile
task6/: CMakeLists.txt
